# cyberino

./: .CyberGear.cpp  .CyberGear.hpp  .ICM  .cybergear_driver.cpp  .gitignore  CAN_loopback.ino  CyberGear.cpp  LICENSE  PID.h  README.md  inverted_pendulum.ino  madwick_1axis.cpp  madwick_1axis.h
inverted_pendulum/: CyberGear.cpp  CyberGear.h  PID.cpp  RobotState.cpp  RobotState.h  StateFeedback.cpp  StateFeedback.h  inverted_pendulum.ino  madwick_1axis.cpp  madwick_1axis.h
inverted_pendulum_sim/: calc_inverted_pendulum.py  generated_eq1_func.py  generated_eq2_func.py  get_telemetry.py  linear_EoM.py  matrices.npz  mpc_sim_casadi.py  non_linear_EoM.py  ppo_sim.py  ppo_test.py  ppo_wheeled_pendulum_metrics.json  pyproject.toml  sensor_data.csv  state_feedbacl.py
inverted_pendulum_sim/InvertPendulam/meshes/: InvertPendualm_mainBody_CoG_origin_binary.stl  InvertPendulam_wheel_left_center_origin_binary.stl  InvertPendulam_wheel_right_center_origin_binary.stl
inverted_pendulum_sim/InvertPendulam/mjcf/: InvertPendulam.xml
inverted_pendulum_sim/InvertPendulam/urdf/: InvertPendulam.urdf
