[project]
name = "inverted-pendulum-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "cvxpy>=1.8.1",
    "dill>=0.4.1",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.7",
    "mujoco>=3.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "rich>=14.3.3",
    "scipy>=1.16.3",
    "stable-baselines3>=2.5.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
    "casadi>=3.7.2",
]
